<resources>
    <string name="app_name">Snapshots</string>
    <string name="home_title">Home</string>
    <string name="home_add">Create</string>
    <string name="home_profile">Profile</string>
    <string name="btn_delete">Delete</string>
    <string name="database_connection">https://snapshots-40de9-default-rtdb.europe-west1.firebasedatabase.app"</string>
    <string name="post_message_title">Select an image</string>
    <string name="btn_share">Share</string>
    <string name="img_description">Snapshot image</string>
    <string name="til_title_hint">snapshot title</string>
    <string name="post_message_valid_title">Please add a title</string>
    <string name="select_img_btn">Select image</string>
    <string name="upload_progress">%1$d%%</string>
    <string name="main_auth_welcome">Welcome</string>
    <string name="logout">Log out</string>
    <string name="txt_user">full name</string>
    <string name="profile_logout">See you soon…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_delete_success">Snapshot deleted</string>
    <string name="home_delete_title">Delete</string>
    <string name="home_delete_message">Delete snapshot?</string>
    <string name="home_delete_positive">Accept</string>
    <string name="home_delete_negative">Cancel</string>
    <string name="home_delete_error">Error deleting the photo</string>
    <string name="home_delete_not_allowed">You are not the owner of the snapshot</string>
    <string name="profile_image_desc">user image</string>
    <string name="full_screen_image">Full screen image</string>
    <string name="permission_required">Permissions are required to use this feature</string>
    <string name="ok">OK</string>
    <string name="select_array_gallery">Gallery</string>
    <string name="select_array_camera">Camera</string>
    <string name="select_option_array">Select option</string>
    <string name="post_message_success">Snapshot published</string>
    <string name="post_message_error_not_authorized">Error: You do not have permission to access this object</string>
    <string name="post_message_error">Error publishing the snapshot</string>
    <string name="home_user">Uploaded by %1$s on %2$s</string>
    <string name="date_format">dd/MM/yyyy \'at\' HH:m</string>
</resources>