<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_default"
    tools:context=".ui.fragments.HomeFragment"
    tools:ignore="VisualLintBounds">

    <!-- Barra de progreso horizontal -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:progressBarStyleHorizontal"
        android:visibility="invisible"/>

    <!-- Botón para publicar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:text="@string/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"/>

    <!-- Texto para el mensaje de publicación -->
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPost"
        app:layout_constraintTop_toTopOf="@id/btnPost"
        app:layout_constraintBottom_toBottomOf="@id/btnPost"
        android:text="@string/post_message_title"
        android:textAppearance="?attr/textAppearanceHeadline6"/>

    <!-- Campo de entrada para el título -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/til_title_hint"
        android:visibility="gone"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPost">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ImageView para mostrar la foto seleccionada -->
    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tilTitle"
        app:layout_constraintDimensionRatio="H,4:3"
        android:contentDescription="@string/img_description"
        tools:ignore="VisualLintBounds" />

    <!-- Botón para seleccionar una imagen -->
    <ImageButton
        android:id="@+id/btnSelect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/select_img_btn"
        android:src="@drawable/ic_img_search"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="@id/imgPhoto"
        app:layout_constraintEnd_toEndOf="@id/imgPhoto"
        app:layout_constraintTop_toTopOf="@id/imgPhoto"
        app:layout_constraintBottom_toBottomOf="@id/imgPhoto"
        tools:ignore="VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>